# Rust-Codes

./: README.md
axum/axum-tracing-opentelemetry/: Cargo.toml
axum/axum-tracing-opentelemetry/src/: main.rs
codes/iron-gcd/: Cargo.toml
codes/iron-gcd/src/: main.rs
codes/mandlebrot/: Cargo.toml  mandlebrot.md
codes/mandlebrot/src/: main.rs
trpl/base-type/array/src/: main.rs
trpl/base-type/bool/: Cargo.toml
trpl/base-type/bool/src/: main.rs
trpl/base-type/char/: Cargo.toml
trpl/base-type/char/src/: main.rs
trpl/base-type/float/src/: main.rs
trpl/base-type/int/: Cargo.toml
trpl/base-type/int/src/: main.rs
trpl/base-type/point/src/: main.rs
trpl/base-type/slice/src/: main.rs
trpl/base-type/str/: Cargo.toml
trpl/base-type/str/src/: main.rs
trpl/base-type/tuple/src/: main.rs
trpl/expression/exp-let/: Cargo.toml
trpl/expression/exp-loop/: Cargo.toml
trpl/ownership/moved/: Cargo.toml
trpl/ownership/rc_arc/: Cargo.toml
trpl/reference/ref-safe/: Cargo.toml
trpl/reference/ref-value/: Cargo.toml
trpl/reference/share-modify/: Cargo.toml
wiki/conversion/from_and_into/: Cargo.toml
wiki/conversion/tryfrom_and_tryinto/: Cargo.toml
wiki/custom_types/: Cargo.toml
wiki/custom_types/src/: main.rs
wiki/hello_world/fmt/: Cargo.toml
wiki/primitives/: Cargo.toml
wiki/primitives/src/: main.rs
wiki/types/aliasing/: Cargo.toml
wiki/types/casting/: Cargo.toml
wiki/types/inference/: Cargo.toml
wiki/types/literals/: Cargo.toml
wiki/variable_bindings/: Cargo.toml
wiki/variable_bindings/src/: main.rs
(+22 files in other folders)
