[package]
name = "axum-tracing-opentelemetry"
version = "0.1.0"
edition = "2021"
publish = ["crates-io"]
authors = ["xiuxiubiu <xiuxiubiu@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.31"
opentelemetry = "0.21.0"
opentelemetry_sdk = "0.21.1"
serde = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.22.0"
tracing-serde = "0.1.3"
tracing-subscriber = { version = "0.3.18", features = ["tracing"] }
